# 75.59-Concurrentes-TP1

./: .gitignore  75_59_Concurrentes_TP1.cbp  CMakeLists.txt  README.md  log.txt
src/: Camera.h  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  ImageQualityFix.h  MemoriaCompartida.h  Observatory.cpp  Observatory.h  ObservatoryBuilder.h  Pixel.cpp  Pixel.h  Resolution.cpp  main.cpp
src/image/: Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  Pixel.cpp  Pixel.h
src/image/algorithm/: ImageQualityFix.cpp  ImageQualityFix.h  ImageQualityFixer.cpp  ImageQualityFixer.h
src/image/builder/: ImageBuilder.cpp
src/image/factory/: ImageBuilder.h  ImageSerializer.cpp  ImageSerializer.h
src/image/repository/: ImageRepository.cpp  ImageRepository.h  ImageSerializer.cpp  ImageSerializer.h
src/image/service/: ImageService.cpp  ImageService.h
src/ipc/fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  FifoReader.cpp  FifoReader.h  FifoWriter.cpp  FifoWriter.h
src/ipc/memory/: SharedMemory.cpp  SharedMemory.h
src/ipc/pipes/: Pipe.cpp  Pipe.h
src/log/: Logger.cpp  Logger.h
src/memory/: SharedMemory.cpp  SharedMemory.h
src/observatory/: Observatory.cpp  Observatory.h  ObservatoryBuilder.cpp
src/observatory/camera/: Camera.cpp  Camera.h  Resolution.h
src/signal/: EventHandler.h  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
